--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,17 @@
 {
-  "short_name": "AF App",
+  "short_name": "Advance Fertilizer",
   "name": "Advance Fertilizer",
   "description": "แอปพลิเคชันสำหรับเก็บข้อมูลร้านค้าและเกษตรกร",
   "icons": [
     {
-      "src": "https://placehold.co/192x192/22c55e/ffffff?text=AF",
-      "type": "image/png",
+      "src": "https://img5.pic.in.th/file/secure-sv1/428709424_3685682595091856_2231537038448980245_n.th.jpg",
+      "type": "image/jpeg",
       "sizes": "192x192",
       "purpose": "any maskable"
     },
     {
-      "src": "https://placehold.co/512x512/22c55e/ffffff?text=AF",
-      "type": "image/png",
+      "src": "https://img5.pic.in.th/file/secure-sv1/428709424_3685682595091856_2231537038448980245_n.th.jpg",
+      "type": "image/jpeg",
       "sizes": "512x512",
       "purpose": "any maskable"
     }
@@ -21,5 +21,5 @@
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#ffffff",
-  "theme_color": "#22c55e"
+  "theme_color": "#ec4899"
 }
